--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button id="play-button">🎶 Play Carol</button>
         </div>
         <div class="donation-section">
-            <h2>Feeling Generous?</h2>
+            <h2>mabuot ka?</h2>
             <button id="donate-button">🎁 gai kwarta</button>
             <button id="pass-button">⏩ pass</button>
         </div>
