--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         </div>
     </main>
 
+    <div id="countdown" class="countdown">
+        <h2 class="blinking">🎅 Countdown 🎄</h2>
+        <p id="time-remaining" class="blinking"></p>
+    </div>
+    
+
     <footer>
         <p>&copy; 2024 by Keith. All rights reserved.</p>
     </footer>
