--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </main>
 
     <div id="countdown" class="countdown">
-        <h2 class="blinking">🎅 Countdown 🎄</h2>
-        <p id="time-remaining" class="blinking"></p>
+        <h2>🎅 Countdown 🎄</h2>
+        <p id="time-remaining" ></p>
     </div>
     
 
