--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
     <header>
         <h1 class="blinking">MERRY CHRISTMAS PO!🎄</h1>
-        <p> ayoo! mangarol po!</p>
     </header>
 
         <!----------snowflakes-->
@@ -18,30 +17,37 @@
 
     <main>
         <audio id="carol" src="carol-song/online-caroling.mp3" type="audio"></audio>
+        <p class="mangarol"> ayoo! mangarol po!</p>
         <div>
-            <button id="play-button">🎶 Play Carol</button>
+            <button id="play-button">🎶 pindota ini</button>
         </div>
         <div class="donation-section">
-            <h2>mabuot ka?</h2>
+            <h2 class="mabuot">mabuot ka?</h2>
             <button id="donate-button">🎁 gai kwarta</button>
             <button id="pass-button">⏩ pass</button>
         </div>
     </main>
 
     <div id="countdown" class="countdown">
-        <h2>🎅 Countdown 🎄</h2>
-        <p id="time-remaining" ></p>
+        <p id="time-remaining" ><br><h2>nalang pasko na</h2></p>
     </div>
     
 
     <footer>
-        <p>&copy; 2024 by Keith. All rights reserved.</p>
+        <p>&copy; 2024 by <a href="https://www.facebook.com/rnzrmbln" class="no-underline">Keith</a>. &nbsp;All rights reserved.</p>
     </footer>
 
     <!-- Modal for QR Code -->
     <div id="qr-modal" class="modal">
         <div class="modal-content">
             <span id="close-modal" class="close">&times;</span>
+                      <!-- thank u song -->
+            <audio id="thank-you-audio" loop>
+                <source src="carol-song/tenkyo.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+            
+
             <h3 class="note">pa scan po hihihi</h3>
             <img src="image/gcash-qr.jpg" alt="GCash QR Code" class="qr-code">
             <p class="note">Thank you po!🎄</p>
