--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christmas Carol</title>
+    <meta property="og:title" content="pangarol ni keith">
+    <meta property="og:description" content="Join me for a fun online carol and spread the holiday cheer!">
+    <meta property="og:image" content="https://keithcs.xyz/images/preview.png">
+    <meta property="og:url" content="https://keithcs.xyz">
+    <meta property="og:type" content="website">
+    <title>pangarol ni keith</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
