--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <meta property="og:image" content="https://keithcs.xyz/images/preview.png">
     <meta property="og:url" content="https://keithcs.xyz">
     <meta property="og:type" content="website">
-    <title>pangarol ni keith</title>
+    <title>Christmas Carol</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.cdnfonts.com/css/cloudy-night" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Mountains of Christmas' rel='stylesheet'>
 </head>
 <body>
     <header>
