--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="pangarol ni keith">
-    <meta property="og:description" content="Join me for a fun online carol and spread the holiday cheer!">
+    <meta property="og:title" content="carol">
+    <meta property="og:description" content="pangarol ni keith ahahaha">
     <meta property="og:image" content="https://keithcs.xyz/images/preview.png">
     <meta property="og:url" content="https://keithcs.xyz">
     <meta property="og:type" content="website">
     <title>Christmas Carol</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.cdnfonts.com/css/cloudy-night" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Mountains of Christmas' rel='stylesheet'>
+    <link rel="stylesheet" href="styles.css">           
 </head>
 <body>
+    
     <header>
         <h1 class="blinking">MERRY CHRISTMAS PO!🎄</h1>
     </header>
@@ -30,7 +29,7 @@
         </div>
         <div class="donation-section">
             <h2 class="mabuot">mabuot ka?</h2>
-            <button id="donate-button">🎁 gai kwarta</button>
+            <button id="donate-button">🎁 send gcash</button>
             <button id="pass-button">⏩ pass</button>
         </div>
     </main>
